[project]
name = "rcps_pytorch"
version = "0.0.1"
authors = [
  { name="James Ashford", email="ashfordj@rocketmail.com" },
]
description = "Reverse-complement parameter sharing (RCPS) layers for machine learning on DNA sequences in PyTorch "
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  'einops>=0.6.1',
  'torch>=1.9.1'
]

[project.urls]
"Homepage" = "https://github.com/JELAshford/rcps-pytorch"